syntax = "proto3";

option csharp_namespace = "LauncherWebService.Services";

package login;

service LoginManager {
	rpc RequestLogin (LoginRequest) returns (stream LoginReply);
}

message LoginRequest {
	string username = 1;
	string password = 2;
}

message LoginReply {
	string status = 1;
	string username = 2;
	repeated string characters = 3;
}
